# internal/provider/model_dnssec_record.go
@@ -2,7 +2,6 @@ package provider
 
 import (
 	"context"
-	"fmt"
 
 	"github.com/hashicorp/terraform-plugin-framework/diag"
 	"github.com/hashicorp/terraform-plugin-framework/types"
@@ -10,7 +9,6 @@ import (
 )
 
 type DnssecRecordModel struct {
-	Domain          types.String `tfsdk:"domain"`
 	KeyTag          types.String `tfsdk:"key_tag"`
 	Alg             types.String `tfsdk:"alg"`
 	DigestType      types.String `tfsdk:"digest_type"`
@@ -20,20 +18,24 @@ type DnssecRecordModel struct {
 	KeyDataProtocol types.String `tfsdk:"key_data_protocol"`
 	KeyDataAlgo     types.String `tfsdk:"key_data_algo"`
 	KeyDataPubKey   types.String `tfsdk:"key_data_pub_key"`
-	ID              types.String `tfsdk:"id"` // computed: domain:keyTag
+}
+
+func coalesceString(s *string) string {
+	if s == nil {
+		return ""
+	}
+	return *s
 }
 
 func (m *DnssecRecordModel) Fill(ctx context.Context, record apiclient.DnssecGetRecord) (diags diag.Diagnostics) {
-	m.Domain = types.StringPointerValue(record.Domain)
 	m.KeyTag = types.StringValue(record.KeyTag)
 	m.Alg = types.StringValue(record.Alg)
 	m.DigestType = types.StringValue(record.DigestType)
 	m.Digest = types.StringValue(record.Digest)
-	m.MaxSigLife = types.StringPointerValue(record.MaxSigLife)
-	m.KeyDataFlags = types.StringPointerValue(record.KeyDataFlags)
-	m.KeyDataProtocol = types.StringPointerValue(record.KeyDataProtocol)
-	m.KeyDataAlgo = types.StringPointerValue(record.KeyDataAlgo)
-	m.KeyDataPubKey = types.StringPointerValue(record.KeyDataPubKey)
-	m.ID = types.StringValue(fmt.Sprintf("%s", record.KeyTag))
+	m.MaxSigLife = types.StringValue(coalesceString(record.MaxSigLife))
+	m.KeyDataFlags = types.StringValue(coalesceString(record.KeyDataFlags))
+	m.KeyDataProtocol = types.StringValue(coalesceString(record.KeyDataProtocol))
+	m.KeyDataAlgo = types.StringValue(coalesceString(record.KeyDataAlgo))
+	m.KeyDataPubKey = types.StringValue(coalesceString(record.KeyDataPubKey))
 	return
 }
